--- a/styles/header.css
+++ b/styles/header.css
@@ -25,3 +25,9 @@ nav ul li a {
 	top: 10px;
 	right: 100px;
 }
+.header__button {
+    list-style: none;
+	position: relative;
+	top: 10px;
+	right: 100px;
+}
