--- a/styles/header.css
+++ b/styles/header.css
@@ -31,7 +31,17 @@ nav ul li a {
     padding: 10px;
     margin: 5px;
 
-    background-color: rgb(62, 120, 167);
+    background-color: rgb(130, 52, 169);
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    position: center;
+}
+.header__button{
+    display: inline-block;
+    padding: 10px;
+    margin: 5px;
+
+    background-color: rgb(130, 52,169);
     color: rgb(255, 255, 255);
     text-decoration: none;
 }
