--- a/styles/header.css
+++ b/styles/header.css
@@ -44,4 +44,5 @@ nav ul li a {
     background-color: rgb(130, 52,169);
     color: rgb(255, 255, 255);
     text-decoration: none;
+    position: relative;
 }
