--- a/styles/header.css
+++ b/styles/header.css
@@ -1,23 +1,20 @@
-header {
+.header {
     background: #c48cdc;
     color: #ffffff;
     padding: 20px 0;
     text-align: center;
 }
-
-nav ul {
-    list-style: none;
-    padding: 0;
+.h1{
+  color: #f6f5f1;
+  font: 40px Jost; 
+  margin-left: 300px;
 }
-
-nav ul li {
-    display: inline;
-    margin: 0 15px;
-}
-
-nav ul li a {
-    color: #ffffff;
-    text-decoration: none;
+.descript{
+  width: 300px;
+  color: #f6f5f1;
+  font-style: bold;
+  margin: 70px 0 0 30px; 
+  font-size:22px; 
 }
 .menu {
     margin: 0;
@@ -45,4 +42,6 @@ nav ul li a {
     color: rgb(255, 255, 255);
     text-decoration: none;
     position: relative;
+    top: 10px;
+    right: 10px;
 }
