--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,8 +1,8 @@
 footer {
     text-align: center;
     padding: 10px 0;
-    background: #c48cdc;
-    color: #1e1b1b;
+    background: #2b9a77;
+    color: #ffffff;
     position: relative;
     bottom: 0;
     width: 100%;
