--- a/styles/header.css
+++ b/styles/header.css
@@ -28,7 +28,7 @@
     padding: 10px;
     margin: 5px;
 
-    background-color: rgb(130, 52, 169);
+    background-color:#2b9a77;
     color: rgb(255, 255, 255);
     text-decoration: none;
     position: center;
@@ -38,7 +38,7 @@
     padding: 10px;
     margin: 5px;
 
-    background-color: rgb(130, 52,169);
+    background-color: rgb(20, 84, 52);
     color: rgb(255, 255, 255);
     text-decoration: none;
     position: relative;
