--- a/styles/typography.css
+++ b/styles/typography.css
@@ -8,7 +8,7 @@
     font-size: 16px;
     font-weight: 600;
 
-    background-color: aquamarine;
+    background-color: rgb(57, 173, 134);
     color: black;
     border: 1px solid rgb(154, 115, 154);
 
@@ -20,13 +20,13 @@
 }
 .card__button button{
 
-    background-color: rgb(135, 29, 135);
+    background-color: rgb(20, 84, 52);
     color: antiquewhite;
-    border: 1px solid rgb(75, 13, 101);
+    border: 1px solid #2b9a77;
 
 }
 .articles-menu__button button{
-     background-color: rgb(135, 29, 135);
+     background-color: rgb(20, 84, 52);
     color: antiquewhite;
-    border: 1px solid rgb(75, 13, 101);
+    border: 1px solid #2b9a77;
 }
