--- a/styles/main.css
+++ b/styles/main.css
@@ -39,6 +39,16 @@ color: black;
  box-shadow: 1px 2px 20px 5px #d7d7d7;
 }
 
+.articles-menu__card{
+ width: 350px;
+ padding: 15px;
+ background-color: aliceblue;
+ color: black;
+ box-shadow: 1px 2px 20px 5px #d7d7d7;
+ display: flex;
+ flex-direction: column;
+}
+
 .articles-menu__title{
     margin-top: 15px;
  margin-bottom: 15px;
@@ -46,7 +56,7 @@ color: black;
  font-weight: bold;
  text-align: center;
 }
-.article-menu__text{
+.articles-menu__text{
     margin-top: 0;
  margin-bottom: 15px;
 }
@@ -56,5 +66,14 @@ color: black;
  background-color: rgb(26, 102, 41);
  color: rgb(255, 255, 255);
  text-decoration: none;
- text-align: cente
+ text-align: center;
+ margin-top: auto;
+}
+.articles-menu__title__list{
+    margin: 0;
+ padding: 20px 0;
+ display: flex;
+ gap: 20px;
+ flex-wrap: wrap;
+ list-style-type: none;
 }
