--- a/styles/main.css
+++ b/styles/main.css
@@ -34,29 +34,29 @@ background-color: #2b9a77;
 .articles-menu{
      width: 350px;
  padding: 15px;
- background-color: rgb(91, 217, 131);
+ background-color: rgb(59, 189, 100);
 color: black;
- box-shadow: 1px 2px 20px 5px #d7d7d7;
-}
-
-.articles-menu{
- width: 350px;
- padding: 15px;
- background-color: aliceblue;
- color: black;
  box-shadow: 1px 2px 20px 5px #d7d7d7;
  display: flex;
  flex-direction: column;
+
+ 
+ margin: 0;
+ padding: 20px 0;
+ display: flex;
+ gap: 20px;
+ flex-wrap: wrap;
+ list-style-type: none;
 }
 
-.articles-menu__title{
+.menu__title{
     margin-top: 15px;
  margin-bottom: 15px;
  font-size: 20px;
  font-weight: bold;
  text-align: center;
 }
-.articles-menu__text{
+.menu__text{
     margin-top: 0;
  margin-bottom: 15px;
 }
@@ -69,11 +69,4 @@ color: black;
  text-align: center;
  margin-top: auto;
 }
-.articles-menu{
-    margin: 0;
- padding: 20px 0;
- display: flex;
- gap: 20px;
- flex-wrap: wrap;
- list-style-type: none;
-}
+
