--- a/styles/main.css
+++ b/styles/main.css
@@ -1,68 +1,44 @@
-main {
-    padding: 20px;
+main,
+.announcements,
+.info-section {
+    padding: 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
-section {
-    margin-bottom: 40px;
+main,
+.announcements {
+    background-color: var(--white);
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
 }
-.about{
- display: flex;
- gap: 10px;
+
+.announcements {
+    max-width: 1200px;
+    margin: 2rem auto 0;
+    padding: 2rem;
+    background-color: var(--white);
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+    text-align: center;
 }
-.about__wrap-right{
- width: 500px;
- flex-shrink: 0;
+
+.image-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+    align-items: center;
+    margin-bottom: 1.5rem;
 }
-.about{
-background-color: #2b9a77;
- color: rgb(255, 255, 255);
- padding: 10px;
+
+.image-grid img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    object-fit: cover;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
-.about__button{
- display: block;
- padding: 10px;
- color:rgb(251, 251, 251);
- background-color:rgb(57, 173, 134);
- text-decoration: none;
- margin-top: auto;
- margin-right: auto;
-}
-.about__wrap-left{
- display: flex;
- flex-direction: column;
-}
-.articles-menu{
-     width: 350px;
- padding: 15px;
- background-color: rgb(59, 189, 100);
-color: black;
- box-shadow: 1px 2px 20px 5px #d7d7d7;
- display: flex;
- flex-direction: column;
- margin: 0;
- padding: 20px 0;
- display: flex;
- gap: 20px;
- flex-wrap: wrap;
- list-style-type: none;
-}
-.menu__title{
-    margin-top: 15px;
- margin-bottom: 15px;
- font-size: 20px;
- font-weight: bold;
- text-align: center;
-}
-.menu__text{
-    margin-top: 0;
- margin-bottom: 15px;
-}
-.menu__button{
-    display: block;
- padding: 10px;
- background-color: rgb(26, 102, 41);
- color: rgb(255, 255, 255);
- text-decoration: none;
- text-align: center;
- margin-top: auto;
+
+.announcements h3 {
+    margin-bottom: 1.5rem;
 }
