--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,9 +1,7 @@
 footer {
+    background: var(--primary);
+    color: var(--white);
     text-align: center;
-    padding: 10px 0;
-    background: #2b9a77;
-    color: #ffffff;
-    position: relative;
-    bottom: 0;
-    width: 100%;
+    padding: 1rem;
+    margin-top: 2rem;
 }
