--- a/styles/base.css
+++ b/styles/base.css
@@ -33,3 +33,28 @@ overflow: hidden;
     margin-left: auto;
     margin-right: auto;
 }
+.element.style {
+}
+:root {
+    --primary: #4e3d42;
+    --secondary: #f8f4f0;
+    --accent: #ff7b7b;
+    --white: #ffffff;
+    --gray: #777;
+}
+.* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.html[Attributes Style] {
+    -webkit-locale: "ru";
+}
+user agent stylesheet
+:root {
+    view-transition-name: root;
+}
+user agent stylesheet
+.html {
+    display: block;
+}
