--- a/styles/base.css
+++ b/styles/base.css
@@ -33,7 +33,22 @@ overflow: hidden;
     margin-left: auto;
     margin-right: auto;
 }
-.element.style {
+body {
+    font-family: 'Segoe UI', 'Montserrat', sans-serif;
+    background-color: var(--secondary);
+    color: var(--primary);
+    line-height: 1.6;
+    padding-bottom: 2rem;
+}
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+user agent stylesheet
+body {
+    display: block;
+    margin: 8px;
 }
 :root {
     --primary: #4e3d42;
@@ -41,18 +56,4 @@ overflow: hidden;
     --accent: #ff7b7b;
     --white: #ffffff;
     --gray: #777;
-}
-.* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-.html[Attributes Style] {
-    -webkit-locale: "ru";
-}
-:root {
-    view-transition-name: root;
-}
-.html {
-    display: block;
 }
