--- a/styles/main.css
+++ b/styles/main.css
@@ -96,3 +96,80 @@ main, .announcements, .info-section {
     margin: 0;
     padding: 0;
 }
+div {
+    display: block;
+    unicode-bidi: isolate;
+}
+.hero h2 {
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
+}
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    unicode-bidi: isolate;
+}
+.p, li {
+    font-size: 1.1rem;
+    margin-bottom: 1rem;
+}
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    unicode-bidi: isolate;
+}
+.btn {
+    margin-top: 1rem;
+    background: var(--accent);
+    color: var(--white);
+    border: none;
+    padding: 0.6rem 1.2rem;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: 600;
+    transition: background 0.3s;
+    text-decoration: none;
+}
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+a:-webkit-any-link {
+    color: -webkit-link;
+    cursor: pointer;
+    text-decoration: underline;
+}
+.welcome {
+    display: flex
+;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.div {
+    display: block;
+    unicode-bidi: isolate;
+}
