--- a/styles/base.css
+++ b/styles/base.css
@@ -33,7 +33,7 @@ overflow: hidden;
     margin-left: auto;
     margin-right: auto;
 }
-body {
+.body {
     font-family: 'Segoe UI', 'Montserrat', sans-serif;
     background-color: var(--secondary);
     color: var(--primary);
@@ -45,8 +45,7 @@ body {
     margin: 0;
     padding: 0;
 }
-user agent stylesheet
-body {
+.body {
     display: block;
     margin: 8px;
 }
